# ai-assistent-preditiva

./: .gitignore  README.md  ai_assistente.ipynb  pyproject.toml  requirements.txt
docs/: Tickets.xlsx
src/: agents.py  app.py  config.py  retrievers.py  retrivers.py  supervisor.py  workflow.py
